--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -10,7 +10,7 @@
     android:background="@color/colorPrimary"
     tools:context="info.anwesha2k19.iitp.activities.TimelineActivity">
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/timeline_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,7 +20,7 @@
         app:tabGravity="fill"
         app:tabMode="fixed" />
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/timeline_viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
