--- a/app/src/main/res/layout/card_lectures.xml
+++ b/app/src/main/res/layout/card_lectures.xml
@@ -7,7 +7,7 @@
     tools:context="info.anwesha2k19.iitp.activities.WorkshopActivity">
 
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
@@ -140,5 +140,5 @@
 
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
