--- a/app/src/main/res/layout/fragment_highlights.xml
+++ b/app/src/main/res/layout/fragment_highlights.xml
@@ -5,17 +5,17 @@
     android:background="#000000"
     android:orientation="vertical">
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiperefresh_highlights"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/highlightsRecylerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:isScrollContainer="true" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <TextView
         android:id="@+id/empty_highlight_text_view"
