--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -6,11 +6,11 @@
     android:background="@android:color/white"
     tools:context="info.anwesha2k19.iitp.activities.EventsActivityNew">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_events"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:isScrollContainer="true">
 
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
