--- a/app/src/main/res/layout/activity_events_tabs.xml
+++ b/app/src/main/res/layout/activity_events_tabs.xml
@@ -10,7 +10,7 @@
     tools:context="info.anwesha2k19.iitp.activities.EventsActivityNew">
 
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/event_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,7 +21,7 @@
         app:tabGravity="fill"
         app:tabMode="scrollable" />
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/event_viewpager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
