--- a/app/src/main/res/layout/card_multicity.xml
+++ b/app/src/main/res/layout/card_multicity.xml
@@ -7,7 +7,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     >
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -27,5 +27,5 @@
             android:id="@+id/cardhead"
             android:layout_width="0dp"
             android:layout_height="0dp" />
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
