--- a/app/src/main/res/layout/fragment_developers.xml
+++ b/app/src/main/res/layout/fragment_developers.xml
@@ -35,7 +35,7 @@
 
 
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -127,9 +127,9 @@
                     android:layout_marginTop="16sp"
                     android:background="@color/colorSignIn" />
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -221,6 +221,6 @@
                     android:layout_marginTop="16sp"
                     android:background="@color/colorSignIn" />
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </ScrollView>
