--- a/app/src/main/res/layout/fragment_event_category.xml
+++ b/app/src/main/res/layout/fragment_event_category.xml
@@ -5,7 +5,7 @@
     tools:context="info.anwesha2k19.iitp.fragments.EventCategoryFragment"
     android:background="@drawable/spons_back_mob">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
