--- a/app/src/main/res/layout/gallery_image_view.xml
+++ b/app/src/main/res/layout/gallery_image_view.xml
@@ -6,7 +6,7 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <android.support.design.card.MaterialCardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
@@ -24,6 +24,6 @@
             android:foreground="?android:attr/selectableItemBackground"
             android:scaleType="fitXY" />
 
-    </android.support.design.card.MaterialCardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
